k8s/checkit-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkit
  labels:
    name: checkit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkit
  template:
    metadata:
      labels:
        app: checkit
    spec:
      containers:
      - name: checkit
        image: gcr.io/k8s-labo1-edj/checkit:2
        imagePullPolicy: Always
        volumeMounts:
        - name: checkit-secret-vol
          mountPath: "/config/checkit"
          readOnly: true
        - name: mypv-storage
          mountPath: "/pvcvol"
        ports:
        - containerPort: 8080
      volumes:
      - name: checkit-secret-vol
        secret:
          secretName: checkit-secret
      - name: mypv-storage
        persistentVolumeClaim:
          claimName: mypv-claim
