k8s/checkit2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkit2
  labels:
    name: checkit2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkit2
  template:
    metadata:
      labels:
        app: checkit2
    spec:
      containers:
      - name: checkit2
        image: gcr.io/k8s-labo1-edj/checkit:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
