k8s/checkit-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkit
  labels:
    app: checkit
spec:
  type:    ClusterIP
  selector:
    app: checkit
  ports:
  - port: 80
    name: http
    targetPort: 8080
