k8s/checkit2-svcnp.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkit2
  labels:
    app: checkit2
spec:
 type: NodePort
 selector:
   app: checkit2
 ports:
 - port: 80
   name: http
   targetPort: 8080
